--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,4 @@
-/* Add CSS Styling */
+.odd-number {
+    background-color: rgb(250, 137, 137);
+    font-family: Verdana, DejaVu Sans, sans-serif;
+}
