--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -2,3 +2,7 @@
     background-color: rgb(250, 137, 137);
     font-family: Verdana, DejaVu Sans, sans-serif;
 }
+
+.odd-number.cooler {
+    font-size: 24px;
+}
