--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -11,3 +11,9 @@
     color: rgb(0, 0, 255);
     font-size: 36px;
 }
+
+#another {
+    background-color: rgb(130, 255, 92);
+    font-size: 24px;
+    font-weight: bold;
+}
