--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,9 +1,9 @@
 .odd-number {
     background-color: rgb(250, 137, 137);
-    font-family: Verdana, DejaVu Sans, sans-serif;
+    font-family: Verdana, "DejaVu Sans", sans-serif;
 }
 
-.odd-number.cooler {
+.adjust-font-size {
     font-size: 24px;
 }
 
@@ -14,6 +14,5 @@
 
 #another {
     background-color: rgb(130, 255, 92);
-    font-size: 24px;
     font-weight: bold;
 }
